// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It could pass through custom property 1`] = `
<div>
  <input />
  <div />
</div>
`;

exports[`It sould be return valle component if connect the basic component 1`] = `
<div>
  <input />
  <div>
    It should have value
  </div>
</div>
`;
